--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.60",
+    "@ai-sdk/react": "^2.0.86",
     "@google/genai": "^0.6.1",
     "@headlessui/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tinymce/tinymce-react": "^6.0.0",
+    "ai": "^5.0.86",
     "axios": "^1.6.2",
     "date-fns": "^4.1.0",
     "prismjs": "^1.30.0",
@@ -23,6 +27,7 @@
     "react-markdown": "^10.1.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
+    "react-syntax-highlighter": "^16.1.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
