--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.60",
     "@ai-sdk/react": "^2.0.86",
+    "@ai-sdk/ui-utils": "^1.2.11",
     "@google/genai": "^0.6.1",
     "@headlessui/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.0.1",
